# cm-service

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  tox.ini
.github/: commitlint.ts  dependabot.yml
.github/commitlint/: .gitignore  package.json
.github/rebase-checker/: package.json  rebase-checker.config.mjs
.github/workflows/: build_and_push.yaml  ci.yaml  commitlint.yaml  rebase_checker.yaml  release.yaml  smoketest.yaml
alembic/: README.md  env.py  script.py.mako
alembic/seed/: seed_ci_campaign.yaml  seed_library_manifests.yaml
alembic/versions/: 0b064a0096bf_add_metadata_column_to_campaign_elements.py  0bac2c4206b1_create_audit_log_table.py  1da92a1c740f_create_v2_tables.py  20428abf9581_error_tables_for_v0_1_4.py  20428abf9581_error_tables_for_v0_4_0.py  20e0532d3758_create_new_campaign_tables.py  3cadff0118ab_alter_wms_task_report_for_v2.py  47243ea2b1bb_create_notification_tables.py  4c8e81aceea9_add_active_and_metadata_columns_to_queue.py  5d7999152e71_add_tz_to_timestamp_columns.py  69b048e66619_load_seeds.py  731336aa45cc_alter_manifest_table_unique_constraint.py  795040d4a179_seed_default_manifests.py  7bac827dd8cb_deprecate_productions.py  92053b1ad093_separate_out_most_tables_and_indices.py  92053b1ad093_separate_out_most_tables_and_indices_v0_1_4.py  abde345860c5_alter_campaign_element_data_columns.py  acf951c80750_add_ns_column_to_dependency_tables.py  c8b0cbdc11b5_add_tables_for_campaign_schedules_and_.py  cacc1bb4152e_error_indices_for_v0_1_4.py  cacc1bb4152e_error_indices_for_v0_4_0.py  cef0ebaa8241_deprecate_scripttemplates.py  d2a05fd9869c_script_template_for_v0_1_4.py  ec9e474c5388_create_notification_trigger.py  f5e50e000a35_autogenerated_from_model.py  f5e50e000a35_autogenerated_from_model_v0_1_4.py  fb13f1f4ea21_script_template_indices_for_v0_1_4.py  fb13f1f4ea21_script_template_indices_for_v0_4_0.py  fc48b549d66f_create_enums.py
docker/: Dockerfile  Dockerfile-service  Dockerfile-worker  README.md
docker/scripts/: create-lsstsvc1-user.sh  install-dependency-packages.sh  install-fe-base.sh  install-fe.sh  install-worker-stack.sh  install-worker.sh  start-frontend.sh  start-worker.sh
docs/: BUTLER.md  CONTRIBUTING.md  COOKBOOK.md  DAEMON.md  DEBUGGING.md  DEPLOYING.md  FAILURE_STATES.md  NAMESPACES.md  NOTIFICATIONS.md  STATE_MACHINES.md  TEMPLATES.md  WORKFLOWS.md
examples/: bps_script_template.sh  build_hsc_micro.yaml  config_dc2_steps.yaml  config_dc2_test_med.yaml  config_standard_elements.yaml  config_standard_scripts.yaml  empty_config.yaml  error_types.yaml  example_ComCamSim_DRP-ops-rehearsal-3.yaml  example_ComCamSim_DRP-ops-rehearsal-3_steps.yaml  example_HSC_DRP-Prod.yaml  example_HSC_DRP-Prod_start.yaml  example_HSC_DRP-Prod_steps.yaml  example_HSC_DRP-RC2.yaml  example_HSC_DRP-RC2_start.yaml  example_HSC_DRP-RC2_steps.yaml  example_HSC_DRP-RC2_subset.yaml  example_HSC_DRP-RC2_subset_start.yaml  example_HSC_DRP-RC2_subset_steps.yaml  example_LATISS_DRP.yaml  example_LATISS_DRP_start.yaml  example_LATISS_DRP_steps.yaml  example_LSSTCam-imSim_DRP-test-med-1.yaml  example_LSSTCam-imSim_DRP-test-med-1_start.yaml  example_LSSTCam-imSim_DRP-test-med-1_steps.yaml  example_LSSTComCamSim_DRP.yaml  example_LSSTComCamSim_DRP_start.yaml  example_LSSTComCamSim_DRP_steps.yaml  example_LSSTComCamSim_nightly-validation-steps.yaml  example_LSSTComCamSim_nightly-validation.yaml  example_LSSTComCamSim_nightly-validation_start.yaml  example_PDR2-ApPipe.yaml  example_PDR2-ApPipe_steps.yaml  example_blank_campaign.yaml  example_bps_htcondor_script_template.yaml  example_bps_htcondor_yaml_template.yaml  example_bps_panda_script_template.yaml  example_bps_panda_template.yaml  example_bps_panda_yaml_template.yaml  example_campaign_start.yaml  (+50 more)
examples/stack_files/: bps_htcondor_usdf.yaml  gen_hips_both.yaml  requestMemory.yaml
examples/templates/: example_bps_core_script_template.yaml  example_bps_core_yaml_template.yaml  example_bps_htcondor_script_template.yaml  example_bps_panda_script_template.yaml  example_stack_script_template.yaml
integration/: README.md  docker-compose.yaml  integration-overrides.yaml  shared.env
integration/aws.d/: config  credentials
integration/bucket.d/: apdb_config.yaml  external-config-file.yaml
integration/butler.d/: bootstrap.py
integration/passwords.d/: POOL
integration/script/: rubin.py
integration/tokens.d/: cm_rubin_org.jwt
manifests/: README.md
manifests/base/: kustomization.yaml  namespace.yaml  postgres-lb.yaml  postgres.yaml  redis-lb.yaml  redis.yaml
manifests/usdf-cm-dev/: Makefile  kustomization.yaml  postgres-lb.yaml  redis-lb.yaml
requirements/: dev.in  dev.txt  main.in  main.txt
script/: README.md  bootstrap_uv  get_nodes.sh  render_jsonschema.py
smoketest/: README.md  smoketest.yaml
src/cmservice/: __init__.py  config.py  main.py  models.py
tests/: conftest.py  test_bps_report.py  test_parsing.py
tests/cli/: conftest.py  test_campaigns.py  test_commands.py  test_errors.py  test_groups.py  test_jobs.py  test_others.py  test_productions.py  test_steps.py  test_trivial.py  util_functions.py
tests/client/: test_production.py  util_functions.py
tests/common/: test_butler.py  test_common.py  test_config.py  test_flags.py  test_jsonpatch.py  test_panda.py
tests/db/: conftest.py  test_campaign.py  test_daemon.py  test_group.py  test_handlers.py  test_isolated_job.py  test_job.py  test_micro.py  test_node.py  test_pipetask_error_type.py  test_production.py  test_reports.py  test_step.py  util_functions.py
tests/handlers/: external_test.py  internal_test.py  test_interface.py
tests/htcondor/: test_htcondor.py
tests/models/: test_merged_reports.py  test_serde.py
tests/routers/: test_campaigns.py  test_errors.py  test_groups.py  test_index.py  test_jobs.py  test_productions.py  test_reports.py  test_steps.py  test_trivial.py  util_functions.py
tests/v2/: conftest.py  test_artifact_resource.py  test_campaign_routes.py  (+13 more)
(+361 files in other folders)
